syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (UserResponse);
  rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResponse);
  rpc UpdateLastLogin (UpdateLastLoginRequest) returns (UpdateLastLoginResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string role = 5;
  string status = 6;
  string profilePicture = 7;
  string department = 8;
  string phoneNumber = 9;
}

message UpdateUserRequest {
  string userId = 1;
  string username = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  string role = 6;
  string status = 7;
  string profilePicture = 8;
  string department = 9;
  string phoneNumber = 10;
}

message GetUserRequest {
  string userId = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message DeleteUserRequest {
  string userId = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message UpdateLastLoginRequest {
  string userId = 1;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  string role = 6;
  string status = 7;
  string createdAt = 8;
  string updatedAt = 9;
  string lastLoginAt = 10;
  string profilePicture = 11;
  string department = 12;
  string phoneNumber = 13;
}

message UserResponse {
  bool success = 1;
  User user = 2;
  string error = 3;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

message ListUsersResponse {
  bool success = 1;
  repeated User users = 2;
  int32 total = 3;
  int32 page = 4;
  int32 limit = 5;
  string error = 6;
}

message UpdateLastLoginResponse {
  bool success = 1;
  string error = 2;
}